--- a/usproxygo.html
+++ b/usproxygo.html
@@ -97,8 +97,8 @@
                 <td>cox</td>
             </tr>
             <tr>
-                <td>coba yaa</td>
-                <td>coba dulu</td>
+                <td>66.29.129.53.29</td>
+                <td>cox</td>
             </tr>
             <tr>
                 <td></td>
