--- a/usproxygo.html
+++ b/usproxygo.html
@@ -58,12 +58,12 @@
             <tr>
                 <td colspan="2">
                     <p>Untuk Menggunakan IP Proxy dan Port dibawah ini, Kalian bisa menggunakan <strong><a
-                                href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap"
+                                href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap/?target=external"
                                 target="_blank">Tun2TAP</a></strong> dan <strong><a
-                                href="https://play.google.com/store/search?q=socksdroid&c=apps"
+                                href="https://play.google.com/store/search?q=socksdroid&c=apps/?target=external"
                                 target="_blank">SocksDroid</a></strong></p>
                     <p>Proxy mati ? Mau request ? Gabung Grup Whatsapp Proxy Gratis disini -> <strong><a
-                                href="https://chat.whatsapp.com/DfidqXsSW1T9J22W7hjIVy/"
+                                href="https://chat.whatsapp.com/DfidqXsSW1T9J22W7hjIVy/?target=external"
                                 target="_blank">Grup Whatsapp Proxy</a></strong></p>
                 </td>
             </tr>
@@ -97,8 +97,8 @@
                 <td>cox</td>
             </tr>
             <tr>
-                <td>66.29.129.53.29</td>
-                <td>cox</td>
+                <td>tes</td>
+                <td>tes</td>
             </tr>
             <tr>
                 <td></td>
