--- a/usproxygo.html
+++ b/usproxygo.html
@@ -97,8 +97,8 @@
                 <td>cox</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>tes diisi</td>
+                <td>tes diisi</td>
             </tr>
             <tr>
                 <td></td>
