--- a/usproxygo.html
+++ b/usproxygo.html
@@ -49,6 +49,11 @@
             font-weight: bold;
         }
     </style>
+    <script>
+        function reloadPage() {
+            location.reload();
+        }
+    </script>
 </head>
 
 <body>
@@ -58,13 +63,10 @@
             <tr>
                 <td colspan="2">
                     <p>Untuk Menggunakan IP Proxy dan Port dibawah ini, Kalian bisa menggunakan <strong><a
-                                href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap/?target=external"
-                                target="_blank">Tun2TAP</a></strong> dan <strong><a
-                                href="https://play.google.com/store/search?q=socksdroid&c=apps/?target=external"
-                                target="_blank">SocksDroid</a></strong></p>
+                                href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap/?target=external">Tun2TAP</a></strong> dan <strong><a
+                                href="https://play.google.com/store/search?q=socksdroid&c=apps/?target=external">SocksDroid</a></strong></p>
                     <p>Proxy mati ? Mau request ? Gabung Grup Whatsapp Proxy Gratis disini -> <strong><a
-                                href="https://chat.whatsapp.com/DfidqXsSW1T9J22W7hjIVy/?target=external"
-                                target="_blank">Grup Whatsapp Proxy</a></strong></p>
+                                href="https://chat.whatsapp.com/DfidqXsSW1T9J22W7hjIVy/?target=external">Grup Whatsapp Proxy</a></strong></p>
                 </td>
             </tr>
         </table>
@@ -97,7 +99,7 @@
                 <td>cox</td>
             </tr>
             <tr>
-                <td>tes diisi</td>
+                <td></td>
                 <td>tes diisi</td>
             </tr>
             <tr>
@@ -111,6 +113,9 @@
             <!-- Tambahkan baris lain di sini jika diperlukan -->
         </table>
     </div>
+    
+    <!-- Atau, tombol reload menggunakan tag <a> -->
+    <a href="#" onclick="reloadPage(); return false;">Segarkan Halaman</a>
 </body>
 
 </html>
