--- a/usproxygo.html
+++ b/usproxygo.html
@@ -107,8 +107,8 @@
                 <td></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>tes</td>
+                <td>tes</td>
             </tr>
             <!-- Tambahkan baris lain di sini jika diperlukan -->
         </table>
