--- a/usproxygo.html
+++ b/usproxygo.html
@@ -103,8 +103,8 @@
                 <td></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>isi</td>
+                <td>isii</td>
             </tr>
             <tr>
                 <td>tes</td>
