--- a/usproxygo.html
+++ b/usproxygo.html
@@ -99,8 +99,8 @@
                 <td>cox</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>tyty</td>
+                <td>raea</td>
             </tr>
             <tr>
                 <td>isi</td>
