--- a/usproxygo.html
+++ b/usproxygo.html
@@ -99,8 +99,8 @@
                 <td>cox</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>yoyo</td>
+                <td>yoyoy</td>
             </tr>
             <tr>
                 <td></td>
