--- a/usproxygo.html
+++ b/usproxygo.html
@@ -17,6 +17,17 @@
         td {
             color: black;
         }
+        .reload-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            text-decoration: none;
+            border-radius: 4px;
+
+        .reload-button:hover {
+            background-color: #45a049;
 
         .table-container {
             margin-top: 20px;
@@ -72,6 +83,9 @@
             </tr>
         </table>
     </div>
+
+    <button class="reload-button" onclick="reloadPage()">Segarkan Halaman</button>
+    
     <div class="table-container">
         <div class="table-heading">Daftar IP Proxy Server United States</div>
         <table>
