--- a/usproxygo.html
+++ b/usproxygo.html
@@ -17,7 +17,14 @@
         td {
             color: black;
         }
-        
+        .reload-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            text-decoration: none;
+            border-radius: 4px;
 
         .table-container {
             margin-top: 20px;
