--- a/usproxygo.html
+++ b/usproxygo.html
@@ -120,6 +120,8 @@
     
     <!-- Atau, tombol reload menggunakan tag <a> -->
     <a href="#" onclick="reloadPage(); return false;">Segarkan Halaman</a>
+.reloaf page {background-color : #ffd009,
+padding :3 px, margin : 4px }
 </body>
 
 </html>
