--- a/usproxygo.html
+++ b/usproxygo.html
@@ -33,6 +33,9 @@
             font-weight: bold;
         }
 
+        .reloadpage { baground-color : skyblue;
+                     margin : 6px;
+                     padding : 10px}
         table {
             width: 100%;
             border-collapse: collapse;
@@ -120,8 +123,6 @@
     
     <!-- Atau, tombol reload menggunakan tag <a> -->
     <a href="#" onclick="reloadPage(); return false;">Segarkan Halaman</a>
-.reload-page {background-color : #ffd009,
-padding :9px, margin : 4px }
 </body>
 
 </html>
