--- a/usproxygo.html
+++ b/usproxygo.html
@@ -33,8 +33,8 @@
             font-weight: bold;
         }
 
-        .reloadpage { baground-color : skyblue;
-                     margin : 6px;
+        reloadPage { baground-color : skyblue;
+                    margin : 6px;
                      padding : 10px}
         table {
             width: 100%;
