--- a/usproxygo.html
+++ b/usproxygo.html
@@ -33,7 +33,7 @@
             font-weight: bold;
         }
 
-        reloadPage { baground-color : skyblue;
+        .reloadPage { baground-color : skyblue;
                     margin : 6px;
                      padding : 10px}
         table {
