--- a/usproxygo.html
+++ b/usproxygo.html
@@ -35,7 +35,7 @@
 
         .reloadPage { baground-color : skyblue;
                     margin : 6px;
-                     padding : 10px}
+                     padding : 10px;}
         table {
             width: 100%;
             border-collapse: collapse;
