--- a/usproxygo.html
+++ b/usproxygo.html
@@ -32,10 +32,20 @@
             font-size: 25px;
             font-weight: bold;
         }
-
-        .reloadPage { baground-color : skyblue;
-                    margin : 6px;
-                     padding : 10px;}
+        /* Gaya untuk tombol Segarkan Halaman */
+        .reloadPage {
+        background-color: skyblue;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 6px;
+        cursor: pointer;
+        }
+        
         table {
             width: 100%;
             border-collapse: collapse;
@@ -122,7 +132,8 @@
     </div>
     
     <!-- Atau, tombol reload menggunakan tag <a> -->
-    <a href="#" onclick="reloadPage(); return false;">Segarkan Halaman</a>
+    <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
+
 </body>
 
 </html>
