--- a/usproxygo.html
+++ b/usproxygo.html
@@ -34,7 +34,7 @@
         }
         /* Gaya untuk tombol Segarkan Halaman */
         .reloadPage {
-        background-color: skyblue;
+        background-color: green;
         color: white;
         border: none;
         padding: 10px 20px;
@@ -86,7 +86,8 @@
             </tr>
         </table>
     </div>
-
+ <!-- Atau, tombol reload menggunakan tag <a> -->
+    <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
     
     <div class="table-container">
         <div class="table-heading">Daftar IP Proxy Server United States</div>
@@ -131,8 +132,7 @@
         </table>
     </div>
     
-    <!-- Atau, tombol reload menggunakan tag <a> -->
-    <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
+   
 
 </body>
 
