--- a/usproxygo.html
+++ b/usproxygo.html
@@ -86,8 +86,21 @@
             </tr>
         </table>
     </div>
- <!-- Atau, tombol reload menggunakan tag <a> -->
-    <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
+      
+    <div class="table-container">
+        <div class="table-heading">Note</div>
+          <table>
+            <tr>
+                <td colspan="2">
+                      <p>Untuk melihat Update Terbaru dari Daftar Proxy dibawah ini, Silahkan pergi ke Pengaturan dengan mengklik "roda gigi" dipojok kanan atas layar, lalu klik pada "Clear Cache" </p>
+                </td>
+                <td colspan="2">
+                      <p>Selanjutnya Reload Halaman ini dengan mengklik button "Segarkan Halaman" dibawah ini</p>
+                </td>
+                <td colspan="2">
+                 <!-- Atau, tombol reload menggunakan tag <a> -->
+                <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
+                    </td>
     
     <div class="table-container">
         <div class="table-heading">Daftar IP Proxy Server United States</div>
