--- a/usproxygo.html
+++ b/usproxygo.html
@@ -101,6 +101,9 @@
                  <!-- Atau, tombol reload menggunakan tag <a> -->
                 <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
                     </td>
+            </tr>
+          </table>
+    </div>
     
     <div class="table-container">
         <div class="table-heading">Daftar IP Proxy Server United States</div>
