--- a/usproxygo.html
+++ b/usproxygo.html
@@ -92,7 +92,7 @@
           <table>
             <tr>
                 <td colspan="2">
-                      <p>Untuk melihat Update Terbaru dari Daftar Proxy dibawah ini, Silahkan pergi ke Pengaturan dengan mengklik "roda gigi" dipojok kanan atas layar, lalu klik pada "Clear Cache" </p>
+                      <p>Untuk melihat Update Terbaru dari Daftar Proxy dihalaman ini, Silahkan pergi ke Pengaturan dengan mengklik "roda gigi" dipojok kanan atas layar, lalu klik pada "Clear Cache" </p>
                 </td>
             </tr>
             <tr>
