--- a/usproxygo.html
+++ b/usproxygo.html
@@ -91,20 +91,13 @@
         <div class="table-heading">Note</div>
           <table>
             <tr>
-                <td colspan="2">
-                      <p>Untuk melihat Update Terbaru dari Daftar Proxy dihalaman ini, Silahkan pergi ke Pengaturan dengan mengklik "roda gigi" dipojok kanan atas layar, lalu klik pada "Clear Cache" </p>
-                </td>
+                <td>Untuk melihat Update Terbaru dari Daftar Proxy dihalaman ini, Silahkan pergi ke Pengaturan dengan mengklik "roda gigi" dipojok kanan atas layar, lalu klik pada "Clear Cache"</td>
             </tr>
             <tr>
-                <td colspan="2">
-                      <p>Selanjutnya Reload Halaman ini dengan mengklik button "Segarkan Halaman" dibawah ini</p>
-                </td>
+                <td>Selanjutnya Reload Halaman ini dengan mengklik button "Segarkan Halaman" dibawah ini</td>
             </tr>
             <tr>
-                <td colspan="2">
-                 <!-- Atau, tombol reload menggunakan tag <a> -->
-                <button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button>
-                </td>
+                <td><button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button></td>
             </tr>
           </table>
     </div>
