--- a/usproxygo.html
+++ b/usproxygo.html
@@ -68,8 +68,8 @@
                 <td>yoyoy</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>tes lagi</td>
+                <td>tes aja dulu yaa</td>
             </tr>
             <tr>
                 <td>tes</td>
