--- a/usproxygo.html
+++ b/usproxygo.html
@@ -30,9 +30,9 @@
     <div class="table-container">
         <div class="table-heading">Note</div>
           <table>
-            <tr><td>Untuk melihat Update Terbaru dari Daftar Proxy dihalaman ini, Silahkan pergi ke Pengaturan dengan mengklik "roda gigi" dipojok kanan atas layar, lalu klik pada "Clear Cache"</td></tr>
-            <tr><td>Selanjutnya Reload Halaman ini dengan mengklik button "Segarkan Halaman" dibawah ini</td></tr>
-            <tr><td><button class="reloadPage" onclick="reloadPage();">Segarkan Halaman</button></td></tr>
+            <tr><td>Untuk melihat Update Terbaru dari <strong>Daftar Proxy</strong> dihalaman ini, Silahkan pergi ke Pengaturan dengan mengklik <strong>"roda gigi"</strong> dipojok kanan atas layar, lalu klik pada <strong>"Clear Cache"</strong></td></tr>
+            <tr><td>Selanjutnya <strong>Reload</strong> Halaman ini dengan mengklik button <strong>"Segarkan Halaman"</strong> dibawah ini</td></tr>
+            <tr><td><button class="reloadPage" onclick="reloadPage();"><strong>Segarkan Halaman</strong></button></td></tr>
           </table>
     </div>
     
