--- a/usproxygo.html
+++ b/usproxygo.html
@@ -21,7 +21,7 @@
     <p>Untuk Menggunakan IP Proxy dan Port dibawah ini, Kalian bisa menggunakan <strong><a
                 href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap" target="_blank">Tun2TAP</a></strong> dan <strong><a
                 href="https://play.google.com/store/search?q=socksdroid&c=apps" target="_blank">SocksDroid</a></strong></p>
-    <p>Proxy mati? Mau request? Gabung Grup Whatsapp Proxy Gratis disini -> <strong><a
+    <p>Proxy mati? Mau request? Gabung Grup Whatsapp Proxy Premium Gratis disini -> <strong><a
                 href="https://chat.whatsapp.com/DfidqXsSW1T9J22W7hjIVy" target="_blank">Grup Whatsapp Proxy</a></strong></p>
             </td></tr>
         </table>
