--- a/proxyus.html
+++ b/proxyus.html
@@ -28,7 +28,7 @@
           <table>
             <tr><td>Untuk melihat Update Terbaru dari <strong>Daftar Proxy</strong> dihalaman ini, Silahkan pergi ke Pengaturan dengan mengklik <strong>"roda gigi"</strong> dipojok kanan atas layar, lalu klik pada <strong>"Clear Cache"</strong></td></tr>
             <tr><td>Selanjutnya <strong>Reload Data Proxy</strong> dengan mengklik button <strong>"Segarkan Data"</strong> dibawah ini</td></tr>
-            <tr><td><button id="refresh-button">Segarkan Data</button></td></tr>
+            <tr><td><button class="refresh-button" id="refresh-button">Segarkan Data</button></td></tr>
           </table>
     </div>
     
