--- a/proxycanada.html
+++ b/proxycanada.html
@@ -58,7 +58,8 @@
             fetchData("canada");
         });
     </script>
-            
     </div>
+    <div class="table-container">
+        <div class="table-heading"></div>
 </body>
 </html>
