--- a/proxyus.html
+++ b/proxyus.html
@@ -58,7 +58,8 @@
             fetchData("united_states");
         });
     </script>
-            
     </div>
+    <div class="table-container">
+        <div class="table-heading"></div>
 </body>
 </html>
