--- a/proxyjapan.html
+++ b/proxyjapan.html
@@ -60,6 +60,6 @@
     </script>
     </div>
     <div class="table-container">
-        <div class="table-heading"></div>
+        <div class="table-heading">*********</div>
 </body>
 </html>
