--- a/proxyjapan.html
+++ b/proxyjapan.html
@@ -27,7 +27,7 @@
         <div class="table-heading">Note</div>
           <table>
             <tr><td>Untuk melihat Update Terbaru dari <strong>Daftar Proxy</strong> dihalaman ini, Silahkan <strong>Reload Data Proxy</strong> dengan mengklik button <strong>"Segarkan Data"</strong> dibawah ini</td></tr>
-            <tr><td><button class="refresh-button" id="refresh-button">Segarkan Data</button></td></tr>
+            <tr><td><button class="refresh-button" id="refresh-button">Refresh Data</button></td></tr>
           </table>
     </div>
     
@@ -60,6 +60,6 @@
     </script>
     </div>
     <div class="table-container">
-        <div class="table-heading">*********</div>
+        <div class="table-heading">#Gaskeun</div>
 </body>
 </html>
