--- a/proxysingapura.html
+++ b/proxysingapura.html
@@ -49,12 +49,12 @@
     <script>
         // Panggil fetchData saat halaman dimuat pertama kali
         document.addEventListener("DOMContentLoaded", function () {
-            fetchData("united_states");
+            fetchData("singapura");
         });
 
         // Tambahkan event listener ke tombol "Segarkan Data"
         document.getElementById("refresh-button").addEventListener("click", function () {
-            fetchData("united_states");
+            fetchData("singapura");
         });
     </script>
     </div>
