--- a/proxycanada.html
+++ b/proxycanada.html
@@ -26,7 +26,7 @@
     <div class="table-container">
         <div class="table-heading">Note</div>
           <table>
-            <tr><td>Untuk melihat Update Terbaru dari <strong>Daftar Proxy</strong> dihalaman ini, Silahkan <strong>Reload Data Proxy</strong> dengan mengklik button <strong>"Segarkan Data"</strong> dibawah ini</td></tr>
+            <tr><td>Untuk melihat Update Terbaru dari <strong>Daftar Proxy</strong> dihalaman ini, Silahkan <strong>Reload Data Proxy</strong> dengan mengklik button <strong>"Refresh Data"</strong> dibawah ini</td></tr>
             <tr><td><button class="refresh-button" id="refresh-button">Refresh Data</button></td></tr>
           </table>
     </div>
