--- a/homepanduaniklan5detik.html
+++ b/homepanduaniklan5detik.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css"> <!-- Tautan ke berkas CSS -->
     
 </head>
 
 <body>
     <div class="table-container">
-        <div class="table-heading">ProxyShare - Iklan 5 Detik</div>
+        <div class="table-heading">Panduan Game Iklan 5 Detik</div>
         </div>
     <div class="table-container">
         <div class="table-heading">Introduction</div>
        <table>
           <tr>
-            <th colspan="2">Welcome to <strong>ProxyShare - Iklan 5 Detik</strong></th>
+            <th colspan="2">Welcome to <strong>Panduan Game Iklan 5 Detik</strong></th>
           </tr>
           <tr>
             <td colspan="2">Terima Kasih Telah Mendownload Aplikasi Ini.</td>
