--- a/homepanduaniklan5detik.html
+++ b/homepanduaniklan5detik.html
@@ -61,10 +61,10 @@
             <th colspan="2">1. IP Proxy Gratis</th>
           </tr>
            <tr>
-              <td>Kamu bisa mendapatkan <strong>IP Proxy Gratis</strong> di Menu Aplikasi <strong>ProxyShare - Iklan 5 Detik</strong></td>
+              <td>Kamu bisa mendapatkan <strong>IP Proxy Gratis</strong> di Menu Aplikasi <strong>Panduan Game Iklan 5 Detik</strong></td>
           </tr>
           <tr>
-            <th colspan="2">2. Tun2TAP atau VPNSocks</th>
+            <th colspan="2">2. Tun2TAP atau SocksDroid</th>
           </tr>
            <tr>
               <td><strong>Tun2TAP</strong> dan<strong>SocksDroid</strong> digunakan untuk menghubungkan android kamu dengan jaringan Luar menggunakan IP Proxy Premium Gratis dari Aplikasi ini</td>
