--- a/homepanduaniklan5detik.html
+++ b/homepanduaniklan5detik.html
@@ -79,6 +79,8 @@
           </tr>
         </table>
     </div>
+     <div class="table-container">
+        <div class="table-heading"></div>
 
 </body>
 
