--- a/tutorialopenvpn.html
+++ b/tutorialopenvpn.html
@@ -47,38 +47,64 @@
             <td colspan="2">  &#x2713; Pada pemberitahuan "Import .ovpn profile ?" , klik saja OK.</td>
           </tr>
          <tr>
-            <td colspan="2">  &#x2713; Pada pemberitahuan "Import .ovpn profile ?" , klik saja OK.</td>
+            <td colspan="2">  &#x2713; Lalu Klik "Connect"</td>
           </tr>
          <tr>
-            <td colspan="2">  &#x2713; Pada pemberitahuan "Import .ovpn profile ?" , klik saja OK.</td>
+            <td colspan="2">  &#x2713; Selesai.</td>
+          </tr>
+           <tr>
+            <td colspan="2">  <strong>Note : Jika menggunakan user dan password, maka wajib mengisi user dan password tersebut.</strong></td>
           </tr>
          <tr>
-            <th colspan="2">Konfigurasi Proxy</th>
+            <th colspan="2">Cara Download File Konfigurasi Open Vpn di Omgvpn.com</th>
           </tr>
           <tr>
-            <td colspan="2">Di layar utama SocksDroid, ikuti langkah-langkah berikut:</td>
+            <td colspan="2">  &#x2713; Buka situs omgvpn.com</td>
           </tr>
-          <!-- Tulisan yang ingin ditempatkan di bagian paling bawah -->
-          <tr>
-            <td colspan="2">&#x2713; Ketuk ikon "Tombol Pengaturan" (biasanya ikon roda gigi) di pojok kanan atas layar.</td>
+           <tr>
+            <td colspan="2">  &#x2713; Klik Menu lalu klik pada VPN Gate Full</td>
           </tr>
-          <tr>
-            <td colspan="2">&#x2713; Lalu pilih "Add Profile" dan buatlah nama yang anda inginkan lalu klik oke.</td>
+           <tr>
+            <td><img src="https://iili.io/HZCakYb.jpg"></td>
           </tr>
          <tr>
-             <td><img src="https://iili.io/HZT1XWu.jpg" alt="Gambar Tutorial SocksDroid"></td>
-         </tr>
-          <tr>
-            <td colspan="2">&#x2713; Lalu pada "Server IP", masukan IP yang proxy yang kamu dapatkan.</td>
+            <td colspan="2">  &#x2713; Setelah jendela terbuka, geser kebawah hingga menemukan daftar Vpn Gate Server seperti Gambar dibawah ini.</td>
           </tr>
           <tr>
-            <td colspan="2">&#x2713; Pada "Server Port", masukan nomor port yang kamu dapatkan juga.</td>
+            <td><img src="https://iili.io/HZCc6N4.jpg"></td>
           </tr>
-         <tr>
-            <td colspan="2">&#x2713; Langkah terakhir, Aktifkan tombol di bagian atas aplikasi untuk mengaktifkan SocksDroid.</td>
+           <tr>
+            <td colspan="2">  &#x2713; Lalu cari dan pilih Server Negara yang diinginkan.</td>
           </tr>
           <tr>
-            <td colspan="2">&#x2713; Selesai.</td>
+            <td colspan="2">  &#x2713; setelah menemukan server negara yang diinginkan, klik Connect dibawah gambar bendera server tersebut seperti gambar diatas.</td>
+          </tr>
+          <tr>
+            <td colspan="2">  &#x2713; Setelah jendela baru terbuka, geser kebawah, maka kamu akan menemukan username dan password yang akan digunakan, biasanya username dan password = vpn. seperti gambar dibawah ini.</td>
+          </tr>
+           <tr>
+            <td><img src="https://iili.io/HZCEn5u.jpg"></td>
+          </tr>
+           <tr>
+            <td colspan="2">  &#x2713; Geser lagi kebawah hingga menemukan tulisan "Click To Download" untuk mendownload file config seperti gambar dibawah ini.</td>
+          </tr>
+           <tr>
+            <td><img src="https://iili.io/HZCMqAu.jpg"></td>
+          </tr>
+           <tr>
+            <td colspan="2">  &#x2713; Pilih salah satu file config yang diinginkan. lalu klik "Click To Download", maka file akan otomatis terdownload.</td>
+          </tr>
+           <tr>
+            <td colspan="2">  <strong>Selesai !</strong></td>
+          </tr>
+           <tr>
+            <td colspan="2">  &#x2713; Buka situs omgvpn.com</td>
+          </tr>
+           <tr>
+            <td colspan="2">  &#x2713; Buka situs omgvpn.com</td>
+          </tr>
+           <tr>
+            <td colspan="2">  &#x2713; Buka situs omgvpn.com</td>
           </tr>
         </table>
     </div>
