--- a/tutorialopenvpn.html
+++ b/tutorialopenvpn.html
@@ -11,7 +11,9 @@
     <div class="table-container">
         <div class="table-heading">Tutorial OpenVPN Connect</div>
          <!-- Tambahkan gambar di bawah div dengan class "table-heading" -->
+        <div class="image-container">
         <img src="https://play-lh.googleusercontent.com/E9DIOxBPab_nMUfmf2fhzNcEAmjOx-wstIak5zwJpZm7184nd8fUPGBeWMvBMnkOHg=w240-h480" alt="Gambar Tutorial Tun2TAP">
+            </div>
        <table>
           <tr>
             <td colspan="2">Untuk menggunakan OpenVPN di perangkat Android, ikuti langkah-langkah dibawah ini.</td>
@@ -65,13 +67,13 @@
             <td colspan="2">  &#x2713; Klik Menu lalu klik pada VPN Gate Full</td>
           </tr>
            <tr>
-            <td><img src="https://iili.io/HZCakYb.jpg"></td>
+            <td style="text-align: center;"><img src="https://iili.io/HZCakYb.jpg"></td>
           </tr>
          <tr>
             <td colspan="2">  &#x2713; Setelah jendela terbuka, geser kebawah hingga menemukan daftar Vpn Gate Server seperti Gambar dibawah ini.</td>
           </tr>
           <tr>
-            <td><img src="https://iili.io/HZCc6N4.jpg"></td>
+            <td style="text-align: center;"><img src="https://iili.io/HZCc6N4.jpg"></td>
           </tr>
            <tr>
             <td colspan="2">  &#x2713; Lalu cari dan pilih Server Negara yang diinginkan.</td>
@@ -83,13 +85,13 @@
             <td colspan="2">  &#x2713; Setelah jendela baru terbuka, geser kebawah, maka kamu akan menemukan username dan password yang akan digunakan, biasanya username dan password = vpn. seperti gambar dibawah ini.</td>
           </tr>
            <tr>
-            <td><img src="https://iili.io/HZCEn5u.jpg"></td>
+            <td style="text-align: center;"><img src="https://iili.io/HZCEn5u.jpg"></td>
           </tr>
            <tr>
             <td colspan="2">  &#x2713; Geser lagi kebawah hingga menemukan tulisan "Click To Download" untuk mendownload file config seperti gambar dibawah ini.</td>
           </tr>
            <tr>
-            <td><img src="https://iili.io/HZCMqAu.jpg"></td>
+            <td style="text-align: center;"><img src="https://iili.io/HZCMqAu.jpg"></td>
           </tr>
            <tr>
             <td colspan="2">  &#x2713; Pilih salah satu file config yang diinginkan. lalu klik "Click To Download", maka file akan otomatis terdownload.</td>
