--- a/tutorialopenvpn.html
+++ b/tutorialopenvpn.html
@@ -57,9 +57,11 @@
            <tr>
             <td colspan="2">  <strong>Note : Jika menggunakan user dan password, maka wajib mengisi user dan password tersebut.</strong></td>
           </tr>
-         <tr>
-            <th colspan="2">Cara Download File Konfigurasi Open Vpn di Omgvpn.com</th>
-          </tr>
+            </table>
+    </div>
+     <div class="table-container">
+        <div class="table-heading">Cara Download File Konfigurasi Open Vpn di Omgvpn.com</div>
+        <table>
           <tr>
             <td colspan="2">  &#x2713; Buka situs omgvpn.com</td>
           </tr>
