--- a/infogamegacor.html
+++ b/infogamegacor.html
@@ -10,6 +10,14 @@
 <body>
     <div class="table-container">
         <div class="table-heading">Info Game Gacor</div>
+    </div>
+    <div class="table-container">
+        <div class="table-heading"><a
+                href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank">Block Puzzle Plus</a></div>
+    <a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank"><img src="https://play-lh.googleusercontent.com/sD0zPUgVK9KlqYz9pcSpKAsOFpGK7gy9ubKY0T-5o--ZixsaVcFlciIfDPL32TLbcm8" style="max-width: 100%;"></a>
+    </div>
+     <div class="table-container">
+        <div class="table-heading">Info Game Gacor</div>
        <table>
          <tr>
             <th colspan="2"><a
