--- a/infogamegacor.html
+++ b/infogamegacor.html
@@ -10,68 +10,39 @@
 <body>
     <div class="table-container">
         <div class="table-heading">Info Game Gacor</div>
-    </div>
-    <div class="table-container">
-        <div class="table-heading"><a
-                href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank">Block Puzzle Plus</a></div>
-    <a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank"><img src="https://play-lh.googleusercontent.com/sD0zPUgVK9KlqYz9pcSpKAsOFpGK7gy9ubKY0T-5o--ZixsaVcFlciIfDPL32TLbcm8" style="max-width: 100%;"></a>
-    </div>
-     <div class="table-container">
-        <div class="table-heading">Info Game Gacor</div>
        <table>
          <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank">Block Puzzle Plus</a></th>
-          </tr>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank">Block Puzzle Plus</a></th>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.animal.blastmatch" target="_blank">Animals Blast Match</a></th>
+         </tr>
          <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank"><img src="https://play-lh.googleusercontent.com/sD0zPUgVK9KlqYz9pcSpKAsOFpGK7gy9ubKY0T-5o--ZixsaVcFlciIfDPL32TLbcm8" style="max-width: 100%;"></a></td>
-          </tr>
-          <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.animal.blastmatch" target="_blank">Animals Blast Match</a></th>
-          </tr>
-         <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.animal.blastmatch" target="_blank"><img src="https://play-lh.googleusercontent.com/Q0lY5coJj8cpc7LFT1DcyiFqnc6P2BZkBKweI8i5HwQw-J1j_4VRRTDbP7Wm6-ybIA" style="max-width: 100%;"></a></td>
-          </tr>
+         </tr>
           <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.link.bubbleshooter2023" target="_blank">Bubble Shooter 2023</a></th>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.link.bubbleshooter2023" target="_blank">Bubble Shooter 2023</a></th>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.three.animal.blast">Animals Blast</a></th>
           </tr>
          <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.link.bubbleshooter2023" target="_blank"><img src="https://play-lh.googleusercontent.com/pzE3Ksx5dT4KjGT-jLWF0QWLI155R5Kdxctlpe5tNqa_3KZF1m4i9b61BQyVJjBZZEl6" style="max-width: 100%;"></a></td>
-          </tr>
-          <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.three.animal.blast">Animals Blast</a></th>
-          </tr>
-         <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.three.animal.blast" target="_blank"><img src="https://play-lh.googleusercontent.com/5KCGqb5vSh2y2725y-mQOgxhk5YNC2W2HKxXfRTYS9HcjtLiBE77EXvteI8VMPXGlh8" style="max-width: 100%;"></a></td>
-          </tr>
+         </tr>
          <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.sushi.blast.game.r2">Sushi Blast</a></th>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.sushi.blast.game.r2">Sushi Blast</a></th>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.merge.v2.car.v2048v">2048 Merge Cars</a></th>
           </tr>
          <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.sushi.blast.game.r2" target="_blank"><img src="https://play-lh.googleusercontent.com/WwIZ9JLeWGQFOO8yjzgz81bghIFUZ462Adrk-nB0qqzP_GMp81K11r3IdyZ1SrsUBw" style="max-width: 100%;"></a></td>
-          </tr>
-         <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.merge.v2.car.v2048v">2048 Merge Cars</a></th>
-          </tr>
-         <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.merge.v2.car.v2048v" target="_blank"><img src="https://play-lh.googleusercontent.com/aZKgCfsJetlRUupu8_Gvs_DRf1FGmZFwD2JWXQc98lFONlZN4LRuXBar7TOsfY3KWC-R" style="max-width: 100%;"></a></td>
           </tr>
          <tr>
-            <th colspan="2"><a
-                href="https://play.google.com/store/apps/details?id=com.forest.match.fm3.game">Forest Match 3</a></th>
+            <th colspan="2"><a href="https://play.google.com/store/apps/details?id=com.forest.match.fm3.game">Forest Match 3</a></th>
           </tr>
          <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.forest.match.fm3.game" target="_blank"><img src="https://play-lh.googleusercontent.com/R-u0MwF4QdoRbnD9gCxW13qLcjm-WGCqPqnpk3IIjAz1pDy-rPgA7_jA8sxTDOZW4s4" style="max-width: 100%;"></a></td>
           </tr>
         </table>
     </div>
-    <div class="table-container">
-        <div class="table-heading">Info Game Gacor</div>
 </body>
 
 </html>
