--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Halaman Saya</title>
+    <title>ProxyShare Repository</title>
 </head>
+
 <body>
-    <h1>Selamat datang di halaman saya!</h1>
+    <h1>ProxyShare Repository</h1>
+    <ul>
+        <li><a href="proxycanada.html">Proxy US</a></li>
+        <li><a href="proxycanada.html">Proxy Canada</a></li>
+        <li><a href="proxyjapan.html">Proxy Japan</a></li>
+        <li><a href="proxysingapura.html">Proxy Singapura</a></li>
+    </ul>
 </body>
 </html>
