--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>ProxyShare Repository</h1>
     <ul>
-        <li><a href="proxycanada.html">Proxy US</a></li>
+        <li><a href="proxyus.html">Proxy US</a></li>
         <li><a href="proxycanada.html">Proxy Canada</a></li>
         <li><a href="proxyjapan.html">Proxy Japan</a></li>
         <li><a href="proxysingapura.html">Proxy Singapura</a></li>
