--- a/homeproxygo.html
+++ b/homeproxygo.html
@@ -5,82 +5,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css"> <!-- Tautan ke berkas CSS -->
-    
+    <title>Proxy Go - Game Uang Dana</title>
 </head>
 
 <body>
     <div class="table-container">
-        <div class="table-heading">Proxy Go - Game Uang Dana</div>
-        </div>
+        <div class="table-heading">Selamat datang di Proxy Go - Game Uang Dana</div>
+    </div>
+
     <div class="table-container">
-        <div class="table-heading">Introduction</div>
-       <table>
-          <tr>
-            <th colspan="2">Welcome to <strong>Proxy Go - Game Uang Dana</strong></th>
-          </tr>
-          <tr>
-            <td colspan="2">Terima Kasih Telah Mendownload Aplikasi Ini.</td>
-          </tr>
-           <tr>
-            <td colspan="2">Kamu ingin menghasilkan uang dengan bermain game ?</td>
-          </tr>
-          <tr>
-            <td colspan="2">Jika iya, berarti kamu tidak salah download aplikasi ini, karena dengan kamu membaca baik-baik tulisan disini, kemungkinan besar kamu akan bisa menghasilkan Uang dengan bermain game atau bisa dibilang dengan menonton iklan 5 detik.</td>
-          </tr>
-        </table>
+        <div class="table-heading">Tentang Kami</div>
+        <p>
+            Terima kasih telah mengunduh aplikasi ini. Proxy Go adalah sebuah aplikasi yang menyediakan akses ke berbagai layanan VPN dan game yang dapat membantu Anda menjaga privasi Anda saat online dan menghibur diri.
+        </p>
     </div>
 
     <div class="table-container">
         <div class="table-heading">Fitur</div>
-       <table>
-          <tr>
-            <th colspan="2">1. Proxy Premium Gratis</th>
-          </tr>
-           <tr>
-            <th colspan="2">2. Game Yang Sedang Gacor</th>
-          </tr>
-          <tr>
-            <th colspan="2">3. Tutorial Tun2TAP dan SocksDroid</th>
-          </tr>
-           <tr>
-            <th colspan="2">4. Daftar Game Penghasil Uang</th>
-          </tr>
-           <tr>
-            <th colspan="2">5. Daftar VPN Gratis</th>
-          </tr>
-           <tr>
-            <th colspan="2">6. Tutorial OpenVPN</th>
-          </tr>
-        </table>
+        <ul>
+            <li>Proxy Premium Gratis.</li>
+            <li>Akses ke game terkini.</li>
+            <li>Panduan Tun2TAP dan SocksDroid.</li>
+            <li>Daftar game yang dapat menghasilkan uang.</li>
+            <li>VPN Gratis.</li>
+            <li>Panduan OpenVPN.</li>
+        </ul>
     </div>
 
     <div class="table-container">
-        <div class="table-heading">Persiapan</div>
-       <table>
-          <tr>
-            <th colspan="2">1. IP Proxy Gratis</th>
-          </tr>
-           <tr>
-              <td>Kamu bisa mendapatkan <strong>IP Proxy Gratis</strong> di Menu Aplikasi <strong>Panduan Game Iklan 5 Detik</strong></td>
-          </tr>
-          <tr>
-            <th colspan="2">2. Tun2TAP atau SocksDroid</th>
-          </tr>
-           <tr>
-              <td><strong><a
-                href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap" target="_blank">Tun2TAP</a></strong> dan <strong><a
-                href="https://play.google.com/store/search?q=socksdroid&c=apps" target="_blank">SocksDroid</a></strong> digunakan untuk menghubungkan android kamu dengan jaringan Luar menggunakan IP Proxy Premium Gratis dari Aplikasi ini</td>
-          </tr>
-           <tr>
-            <th colspan="2">3. Game</th>
-          </tr>
-           <tr>
-              <td>Setelah Anda terhubung dengan jaringan Luar, anda bisa membuka game dan menonton Iklan 5 Detik di Aplikasi Game yang ingin anda mainkan</td>
-          </tr>
-        </table>
+        <div class="table-heading">Cara Menggunakan</div>
+        <ol>
+            <li>Dapatkan IP Proxy Gratis dengan mengikuti petunjuk di dalam aplikasi.</li>
+            <li>Gunakan aplikasi Tun2TAP atau SocksDroid untuk menghubungkan perangkat Anda ke jaringan luar menggunakan IP Proxy Premium Gratis dari aplikasi ini.</li>
+            <li>Buka game yang Anda inginkan setelah terhubung dengan jaringan luar dan nikmati bermain game sambil mendapatkan penawaran iklan.</li>
+        </ol>
     </div>
-     <div class="table-container">
-        <div class="table-heading"></div>
+
+    <div class="table-container">
+        <div class="table-heading">Kontak</div>
+        <p>Jika Anda memiliki pertanyaan atau masalah, jangan ragu untuk menghubungi tim dukungan kami.</p>
+    </div>
 
 </body>
 
