--- a/proxygo_us.html
+++ b/proxygo_us.html
@@ -10,13 +10,7 @@
 </head>
 
 <body> 
-    <div class="table-container">
-        <div class="table-heading"><button class="refresh-button" id="refresh-button">Refresh Data</button></div>
-          <table>
-            <tr><td>Untuk melihat Update Terbaru dari <strong>Daftar Proxy</strong> dihalaman ini, Silahkan <strong>Reload Data Proxy</strong> dengan mengklik button <strong>"Refresh Data"</strong> dibawah ini</td></tr>
-            <tr><td><button class="refresh-button" id="refresh-button">Refresh Data</button></td></tr>
-          </table>
-    </div>
+    <button class="refresh-button" id="refresh-button">Refresh Data</button>
     
     <div class="table-container">
         <div class="table-heading">Daftar IP Proxy Server United States</div>
@@ -46,7 +40,5 @@
         });
     </script>
     </div>
-    <div class="table-container">
-        <div class="table-heading">#Gaskeun</div>
-</body>
+   
 </html>
