--- a/proxygo_us.html
+++ b/proxygo_us.html
@@ -40,5 +40,6 @@
         });
     </script>
     </div>
+    <iframe src="https://dichvusocks.us/sockslist" width="100%" height="500"></iframe>
    
 </html>
