--- a/proxygo_ca.html
+++ b/proxygo_ca.html
@@ -12,7 +12,7 @@
     <button class="refresh-button" id="refresh-button">Refresh Data</button>
     
     <div class="table-container">
-        <div class="table-heading">Daftar IP Proxy Server United States</div>
+        <div class="table-heading">Daftar IP Proxy Server Canada</div>
        <table id="data-table">
         <thead>
             <tr>
