--- a/proxygo_jpn.html
+++ b/proxygo_jpn.html
@@ -12,7 +12,7 @@
     <button class="refresh-button" id="refresh-button">Refresh Data</button>
     
     <div class="table-container">
-        <div class="table-heading">Daftar IP Proxy Singapura</div>
+        <div class="table-heading">Daftar IP Proxy Japan</div>
        <table id="data-table">
         <thead>
             <tr>
