--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
 </head>
 
 <body>
-    <h1>ProxyShare Repository</h1>
+    <h1>Panduan Game Iklan 5 Detik</h1>
     <ul>
         <li><a href="proxyus.html">Proxy US</a></li>
         <li><a href="proxycanada.html">Proxy Canada</a></li>
         <li><a href="proxyjapan.html">Proxy Japan</a></li>
         <li><a href="proxysingapura.html">Proxy Singapura</a></li>
+    </ul>
+     <h1>Proxy Go -  Game Uang Dana</h1>
+    <ul>
+        <li><a href="proxygo_us.htmll">Proxy US</a></li>
+        <li><a href="proxygo_ca.html">Proxy Canada</a></li>
+        <li><a href="proxygo_jpn.html">Proxy Japan</a></li>
+        <li><a href="proxygo_sg.html">Proxy Singapura</a></li>
     </ul>
 </body>
 </html>
