--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ProxyShare Repository</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css"> <!-- Tautan ke berkas CSS -->
+    <title>Proxy Repository</title>
 </head>
 
 <body>
+    <h1>Semua Data Proxy</h1>
+    <ul>
+        <li><a href="dataproxyall.html">Semua Data Proxy</a></li>
+    </ul>
     <h1>Panduan Game Iklan 5 Detik</h1>
     <ul>
         <li><a href="proxyus.html">Proxy US</a></li>
@@ -14,7 +21,7 @@
     </ul>
      <h1>Proxy Go -  Game Uang Dana</h1>
     <ul>
-        <li><a href="proxygo_us.htmll">Proxy US</a></li>
+        <li><a href="proxygo_us.html">Proxy US</a></li>
         <li><a href="proxygo_ca.html">Proxy Canada</a></li>
         <li><a href="proxygo_jpn.html">Proxy Japan</a></li>
         <li><a href="proxygo_sg.html">Proxy Singapura</a></li>
