--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"> <!-- Tautan ke berkas CSS -->
     <link rel="stylesheet" href="styleindex.css"> <!-- Tautan ke berkas CSS -->
     <title>Proxy Repository</title>
 </head>
@@ -12,6 +11,7 @@
     <h1>Semua Data Proxy</h1>
     <ul>
         <li><a href="dataproxyall.html">Semua Data Proxy</a></li>
+        <li><a href="https://check.dichvusocks.us/" target="_blank">Check Proxy</a></li>
     </ul>
     <h1>Panduan Game Iklan 5 Detik</h1>
     <ul>
