--- a/infogamegacor.html
+++ b/infogamegacor.html
@@ -11,6 +11,14 @@
     <div class="table-container">
         <div class="table-heading">Info Game Gacor</div>
        <table>
+           <tr>
+            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.animal.animalcrushmatch" target="_blank">Animal Crush Match</a></td>
+            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.link.jewelpopblast" target="_blank">Jewel Pop Blast</a></td>
+         </tr>
+         <tr>
+            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.animal.animalcrushmatch" target="_blank"><img src="https://play-lh.googleusercontent.com/GmnbGS3cLUrgfBFodyK57VjvXa18AAgqScYXIaFGUOwWMkvq9qw5LT1HwkxK1MdW24w" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.link.jewelpopblast" target="_blank"><img src="https://play-lh.googleusercontent.com/yzE1UVZav-WPi65UiVxdpEbwWQPsrNSqYhnS3CDebAijUPMhPtyAohAaZev9fAiQR90" style="max-width: 100%;"></a></td>
+         </tr>
          <tr>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank">Block Puzzle Plus</a></td>
             <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.animal.blastmatch" target="_blank">Animals Blast Match</a></td>
