--- a/homeproxygo.html
+++ b/homeproxygo.html
@@ -5,28 +5,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css"> <!-- Tautan ke berkas CSS -->
-    <title>Proxy Go - Game Uang Dana</title>
+    <title>ProxyGo - Iklan 5 Detik</title>
 </head>
 
 <body>
     <div class="table-container">
-        <div class="table-heading">Selamat datang di Proxy Go - Game Uang Dana</div>
+        <div class="table-heading">Selamat datang di ProxyGo - Iklan 5 Detik</div>
     </div>
 
     <div class="table-container">
         <div class="table-heading">Tentang Kami</div>
-        <p>
-            Terima kasih telah mengunduh aplikasi ini. Proxy Go adalah sebuah aplikasi yang menyediakan akses ke berbagai layanan VPN dan game yang dapat membantu Anda menjaga privasi Anda saat online dan menghibur diri.
-        </p>
+        <ul>
+        <li>Terima kasih telah mengunduh aplikasi ini. ProxyGo adalah sebuah aplikasi yang menyediakan akses ke berbagai layanan VPN dan game yang dapat menghasilkan uang.</li>
+        </ul>
     </div>
 
     <div class="table-container">
         <div class="table-heading">Fitur</div>
         <ul>
             <li>Proxy Premium Gratis.</li>
-            <li>Akses ke game terkini.</li>
+            <li>Info Game Gacor</li>
+            <li>Check Proxy</li>
             <li>Panduan Tun2TAP dan SocksDroid.</li>
-            <li>Daftar game yang dapat menghasilkan uang.</li>
             <li>VPN Gratis.</li>
             <li>Panduan OpenVPN.</li>
         </ul>
@@ -35,15 +35,25 @@
     <div class="table-container">
         <div class="table-heading">Cara Menggunakan</div>
         <ol>
-            <li>Dapatkan IP Proxy Gratis dengan mengikuti petunjuk di dalam aplikasi.</li>
-            <li>Gunakan aplikasi Tun2TAP atau SocksDroid untuk menghubungkan perangkat Anda ke jaringan luar menggunakan IP Proxy Premium Gratis dari aplikasi ini.</li>
-            <li>Buka game yang Anda inginkan setelah terhubung dengan jaringan luar dan nikmati bermain game sambil mendapatkan penawaran iklan.</li>
+            <li>Buka Server Proxy yang ingin digunakan, contohnya (Proxy Server Canada)</li>
+            <li>Copy semua IP Proxy Premium yang kami sediakan</li>
+            <li>Lalu Buka Check Proxy dan Paste kan Proxy yang sudah diCopy di kolom yang telah disediakan.</li>
+            <li>Lalu klik "Check"</li>
+            <li>Setelah Proses Selesai, maka dibawahnya akan tampil Proxy yg masih aktif (Live) dan Proxy yg sudah Tidak Aktif (Dead)</li>
+            <li>Lalu Copy IP dan Port yg masih Aktif</li>
+            <li>Buka aplikasi Tun2TAP, untuk menghubungkan perangkat Anda ke jaringan VPN Proxy Premium (Jika belum punya, download di Playstore)</li>
+            <li>Setelah itu "Pastekan" IP dan Port dikolom yang telah disediakan dan klik Connect</li>
+            <li>Jika sudah terkoneksi, Silahkan buka Game yang ingin anda mainkan</li>
+            <li>Selesai</li>
         </ol>
     </div>
 
     <div class="table-container">
         <div class="table-heading">Kontak</div>
-        <p>Jika Anda memiliki pertanyaan atau masalah, jangan ragu untuk menghubungi tim dukungan kami.</p>
+        <ul>
+        <li>Jika Kamu memiliki pertanyaan atau masalah, Atau ingin mendapatkan info terbaru, silahkan Bergabung dengan Grup WhatsApp Kami -> <strong><a
+                href="https://chat.whatsapp.com/DfidqXsSW1T9J22W7hjIVy" target="_blank">Grup Whatsapp Proxy</a></strong></li>
+        </ul>
     </div>
 
 </body>
