--- a/homeproxygo.html
+++ b/homeproxygo.html
@@ -24,11 +24,12 @@
         <div class="table-heading">Fitur</div>
         <ul>
             <li>Proxy Premium Gratis.</li>
+            <li>Proxy Premium Berbayar.</li>
             <li>Info Game Gacor</li>
             <li>Check Proxy</li>
-            <li>Panduan Tun2TAP dan SocksDroid.</li>
-            <li>VPN Gratis.</li>
-            <li>Panduan OpenVPN.</li>
+            <li>Cara Menggunakan Proxy</li>
+            <li>Daftar VPN Gratis</li>
+            <li>Panduan OpenVPN</li>
         </ul>
     </div>
 
@@ -40,7 +41,7 @@
             <li>Lalu Buka Check Proxy dan Paste kan Proxy yang sudah diCopy di kolom yang telah disediakan.</li>
             <li>Lalu klik "Check"</li>
             <li>Setelah Proses Selesai, maka dibawahnya akan tampil Proxy yg masih aktif (Live) dan Proxy yg sudah Tidak Aktif (Dead)</li>
-            <li>Lalu Copy IP dan Port yg masih Aktif</li>
+            <li>Lalu Copy IP dan Port yg masih Aktif (1 Saja)</li>
             <li>Buka aplikasi Tun2TAP, untuk menghubungkan perangkat Anda ke jaringan VPN Proxy Premium (Jika belum punya, download di Playstore)</li>
             <li>Setelah itu "Pastekan" IP dan Port dikolom yang telah disediakan dan klik Connect</li>
             <li>Jika sudah terkoneksi, Silahkan buka Game yang ingin anda mainkan</li>
